<resources>
    <string name="app_name">Falkirk Funders Fayre</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home_legal">www.cvsfalkirk.org.uk | 01324 692000 | info@cvsfalkirk.org.uk | @CVSFalkirk
        \nCVS Falkirk and District is a Company Limited by Guarantee in Scotland No. SC085838 | Scottish Charity No. SC000312 |
        Registered office: Unit 6, Callendar Business Park, Callendar Road, Falkirk, FK1 1XR\n</string>
    <string name="home_p1">Thank you for coming along to our Funders Fayre today, we hope you find the event useful and informative. CVS Falkirk and Falkirk Council
    work together to support local third sector organisations to access funding and are grateful to all our exhibitors here today.\n
    </string>
    <string name="home_p2">As the Third Sector Interface for the Falkirk Council area, CVS Falkirk exists to
    promote, develop and represent the third sector and volunteering. We offer
    assistance and support to communities, groups, voluntary organisations, social enterprises, co-operatives, trusts, CICs and other third sector groups locally.\n
    </string>
    <string name="home_p3">Within the organisation support team we offer funding support and guidance to third sector organisations through a variety of ways:
    </string>
    <string name="home_list">
        \n• Bespoke funding search specific to the organisation and project
        \n• Support to understand funders’ guidance, criteria etc.
        \n• Review of funding applications
        \n• Weekly funding updates through our e-bulletin
        \n• Monthly funding hotlists
        \n• Promotion of local fundraising events through our website,
        \n• e-bulletin and social media\n

    </string>
    <string name="home_contact">If you would like support with funding or have any questions please contact 01324 692000 or email info@cvsfalkirk.org.uk</string>
    <string name="home_signup">Sign up for our e-bulletin today at www.cvsfalkirk.org.uk for all our latest news, events and sector activity or follow us on Twitter:</string>
    <string name="twitter">
    <a href="https://twitter.com/CVSFalkirk">@CVSFalkirk</a>
    </string>
    <string name="home_heading">Welcome\n</string>
    <string name="top_tips">
        <b>1. Review your constitution\n</b>
It’s really important you review your constitution regularly: it is your governing document and tells you how your
organisation must be run so make sure it is fit for purpose before planning any projects or applying for funds.\n\n
        <b>2. Do your homework\n</b>
Always read the funder’s guidelines and the information on their website about work they’ve supported in the past
        and what they want to fund. It might sound obvious but often groups or organisations spend a lot of time applying
        to funders who have specific criteria or aims that they don’t meet.\n\n
        <b>3. Plan ahead\n</b>
Preparing applications and going through the process can take a number of weeks, if not months. Many
funders will have deadlines throughout the year so diarise when you need to submit your application and give
        yourself plenty of time from applying to when you need the funds in place.\n\n
        <b>4. Be specific\n</b>
Make sure to answer the basic questions clearly and concisely when describing your work and how the
        funds will be spent: Why is it needed? Who will benefit? How many will benefit? How will they benefit?
        Where will it take place? What will happen if the project doesn’t take place? How will you evaluate your success?\n\n
        <b>5. Get your facts and figures right\n</b>
Make sure your application is fact based and your numbers add up. Specify all costs and break down the
figures so that the funder understands where you have got your numbers from and include quotations and
estimates rather than approximate figures or guessing how much things will cost. \n\n
        <b>6. Get in \n</b>
Many funders will be pleased to hear from you once you’ve read through their guidelines- if you have
questions and to discuss your application. It shows that you are keen to work together and
        what they are looking for and also gives the funder the chance to learn more about the work that you do.\n\n
        <b>7. Make sure you’ve enclosed all the documents requested\n</b>
You’ll normally be asked to share a copy of your constitution and your annual accounts along with other
supporting documents and policies. This is a great way of showing your organisation’s credibility,
        that your finances are properly managed and that you adhere to any applicable guidelines for example Vulnerable
        persons Policy. \n\n
        <b>8. Check, check and check again!\n</b>
Compare your application with the funder’s guidelines and make sure you’ve answered all of the questions and
addressed all points. Make sure your spelling and grammar are correct too.\n\n
        <b>9. Ask someone to read your application\n</b>
It’s a great idea to ask someone outside the organisation to have a read through your application –
        many things that may be obvious to you might be difficult to understand or vague to someone unfamiliar with your work.
        If they can understand the proposal then it’s likely the grant assessor will too. CVS Falkirk is happy to review applications
        and offer guidance with funding applications.\n\n
        <b>10. SUCCESS!\n</b>
You’ve secured the funds – congratulations. The work doesn’t stop here though! Remember to record any
statistics, case studies, photographs etc. that you need for your monitoring report and submit it before the deadline.
        It’s really important to meet the funder’s conditions of grant and could help with future funding bids\n
    </string>
    <string name="thridss_i1">
    Providing  a range of services to support to charities and groups.\n
Requirements: Falkirk &amp; District based third sector organisations.\n
Contact: 01324 692000 | info@cvsfalkirk.org.uk\n
</string>
    <string name="crowdfunder_txt">
        We\'re in Scotland helping to make great ideas happen through a combination of expert crowdfunding coaching, events and grants\n 
Contact: jenny@crowdfunder.co.uk\n

    </string>
    <string name="First_port">
    Support, funding for social entrepreneurs\n
    Requirements: Social Entrepreneurs\n
    Contact: 0131 564 0331 | ray@firstport.org.uk\n
</string>
    <string name="schoolforsocialenterpreneurs">Provides ongoing training and support to individuals trying to create
and sustain social enterprises.\n
Requirements: Social Entrepreneurs\n
Contact: 07828 030 741 | tracey@ssescotland.org\n
</string>
    <string name="Business_Gateway">Provides practical help and guidance to start ups and growing
businesses.\n
Requirements: Social Entrepreneurs\n
Contact: 01324 804 533 | carron.smith@falkirk.gov.uk\n
</string>
    <string name="community_shares_scotland">Community Shares Scotland can provide hands on support and guidance           to anybody who wishes to raise through community shares.\n
Contact: 0131 220 3777 |  Toby@communitysharesscotland.org.uk\n

</string>
    <string name="Charity_bee">For Charities who are looking to deliver more for less, demonstrate compliance and to save money,
        CharityBee has designed a unique portal for the bespoke advice and business support you need.\n
Contact: 0141 471 0734 |  www.thecharitybee.com\n
</string>
    <string name="sis_txt">Social Investment Scotland is a charity and social enterprise that provides loans to
        other charities, social enterprises and community groups across Scotland.\n
Contact: 0131 558 7706 |  www.socialinvestmentscotland.com\n
</string>
    <string name="Foundation_Scotland">Strengthens local communities by providing a source of funding to community led projects the length and breadth of Scotland.\n
Requirements: Constituted groups\n
Contact: 0141 341 4967 | sian@foundationscotland.org.uk\n
</string>
    <string name="Robertson_trust">Main priorities:  care, health, education &amp; training, community arts,
community sport, alcohol misuse, criminal justice.\n
Requirements: Registered charities or CIC only.\n
Contact: 0141 353 7300 | admin@therobertsontrust.org.uk\n
</string>
    <string name="falkirk_Environment_Trust">Supports environmental projects.\n
Requirements: Groups must be constituted to apply for main grants scheme.\n
Contact: 01324 504816 | info@fet.org.uk\n
</string>
    <string name="FC_falirk_schools">Grants of up to £1000 for educational projects or for recreational
facilities.\n
Requirements: Must be constituted and endorsed by School
Management Team.\n
Contact: 01324 506605 | communityschoolscharityboard@falkirk.gov.uk\n
</string>
    <string name="Falkirk_council">Community Grants Scheme : up to £5,000 over 12 months\n
Requirements: Groups must have a constitution and bank account.\n
Contact: 01324 506065 | funding@falkirk.gov.uk\n
</string>
    <string name="heritage_Fund">Largest dedicated funder of heritage in the UK.\n
Requirements: Constituted voluntary groups, charities\n
Contact: 0131 240 1583 | Anna.James@hlf.org.uk\n
</string>
    <string name="FC_make_A_Diffrence">Make a Difference Fund helps tenants fund projects which improve
the area they live in.\n
Requirements: Community Groups - Tenants and Residents Groups\n
Contact:  01324 590 858 | dawna.chisholm@falkirk.gov.uk\n
</string>
    <string name="Kelvin_valley_leader">Grants from £5,000 to  £125,000 available under three themes: heritage, tourism &amp; leisure, community services &amp; facilities and local business &amp;
employment.\n
Requirements:  Groups must have a constitution and bank account.\n
Contact: 01324 590 711| Tom.Rutherford@falkirk.gov.uk\n
</string>
    <string name="Greenspace_scotland">Grants for developing community projects across Scotland. Funded from the money raised in Tesco Stores from the 5p plastic bag charge.\n
Requirements: Constituted groups.\n
Contact: 01786 849 757  | sue.wyllie@greenspacescotland.org.uk\n
</string>
    <string name="NHS_FV">Small grant scheme for groups and organisations to deliver food
activities within their communities or settings.\n
Requirements: Constituted groups.\n
Contact: 01786 434 491 | susankennedy2@nhs.net \n
</string>
    <string name="sons_of_the_rock">Gives vital financial help to vulnerable individuals and community groups who are facing challenging circumstances.\n
Requirements: Constituted groups.\n
Contact: 01786 841809 | info@sonsoftherock.org.uk
</string>
    <string name="community_fund">Awards lottery money to community groups and projects that improve health, education and the environment.\n
Requirements: Dependent on which fund you are applying to.\n
Contact:  0141 242 1230 | Jessie.Duncan@tnlcommunityfund.org.uk\n
</string>
    <string name="Creative_scotland">Creative Scotland is the public body that supports the arts, screen and creative industries across all parts of Scotland.\n
Requirements: Constituted groups, charities, individuals\n
Contact:  0131 523 0030  | Lewis.Porteous@creativescotland.com\n
</string>
    <string name="paths_for_all">We fund community path projects to ensure that everyone has access to good quality, multi-use and accessible places to walk and be active.\n
Requirements: Constituted groups.\n
Contact: 07741 890861 |  Graham.McQueen@pathsforall.org.uk\n
</string>
    <string name="contact">\nIf you would like any support to source or apply for funding please contact us on:\n\n
    <b>Email:</b> info@cvsfalkirk.org.uk\n
        <b>Tel:</b> 01324 692000\n
    <b>www.cvsfalkirk.org.uk\n</b>
        <b>Twitter:</b> @CVSFalkirk\n
</string>
    <string name="contact_heading">Contact\n</string>
    <string name="reg_char"><b>Registered Charities Only:</b></string>
    <string name="sup_char"><b>Charity Support:</b></string>
</resources>