<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/testing"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/default_circle_indicator_fill_color">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Third Sector Support"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif-light"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.384"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:background="@color/White"
                android:src="@drawable/cvs"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/thridss_i1"
                android:textAlignment="center"
                android:textSize="12sp"
                app:fontFamily="sans-serif-light"
                app:layout_constraintBottom_toBottomOf="parent" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:background="@color/White"
                android:src="@drawable/firstport"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/First_port"
                android:textAlignment="center"
                android:textSize="12sp"
                app:fontFamily="sans-serif-light"
                app:layout_constraintBottom_toBottomOf="parent" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:background="@color/White"
                android:src="@drawable/schoolforscial"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/TSS_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/schoolforsocialenterpreneurs"
                android:textAlignment="center"
                android:textSize="12sp"
                app:fontFamily="sans-serif-light"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:background="@color/White"
                android:src="@drawable/businessgateway"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/TSS_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/Business_Gateway"
                android:textAlignment="center"
                android:textSize="12sp"
                app:fontFamily="sans-serif-light"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:background="@color/White"
                android:src="@drawable/comunityshares"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/TSS_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/community_shares_scotland"
                android:textAlignment="center"
                android:textSize="12sp"
                app:fontFamily="sans-serif-light"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:background="@color/White"
                android:src="@drawable/charitybee"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/TSS_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/Charity_bee"
                android:textAlignment="center"
                android:textSize="12sp"
                app:fontFamily="sans-serif-light"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:background="@color/White"
                android:src="@drawable/sis"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/TSS_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/sis_txt"
                android:textAlignment="center"
                android:textSize="12sp"
                app:fontFamily="sans-serif-light"
                app:layout_constraintBottom_toBottomOf="parent" />

        </LinearLayout>


    </ScrollView>
</android.support.constraint.ConstraintLayout>

